--- a/submit.html
+++ b/submit.html
@@ -1,24 +1,71 @@
-<script>
-  document.getElementById("internship-form").addEventListener("submit", function (e) {
-    e.preventDefault();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Submit an Internship</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    footer {
+      height: 50px;
+      background-color: #f8f9fa;
+      margin-top: 50px;
+    }
+  </style>
+</head>
 
-    const title = document.getElementById("title").value;
-    const country = document.getElementById("country").value;
-    const description = document.getElementById("description").value;
-    const link = document.getElementById("link").value;
+<body>
+  <div class="container mt-4">
+    <a href="index.html" class="btn btn-secondary mb-3">← Back to Home</a>
+    <h2 class="mb-4">Submit an Internship</h2>
 
-    let proposals = JSON.parse(localStorage.getItem("proposals")) || [];
+    <form id="internship-form">
+      <div class="mb-3">
+        <label for="title" class="form-label">Internship Title</label>
+        <input type="text" class="form-control" id="title" required>
+      </div>
+      <div class="mb-3">
+        <label for="country" class="form-label">Country</label>
+        <input type="text" class="form-control" id="country" required>
+      </div>
+      <div class="mb-3">
+        <label for="link" class="form-label">Link to Internship</label>
+        <input type="url" class="form-control" id="link" required>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Job Description</label>
+        <textarea class="form-control" id="description" rows="3" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit Internship</button>
+    </form>
+  </div>
 
-    proposals.push({
-      title,
-      country,
-      description,
-      link
+  <footer class="text-center d-flex align-items-center justify-content-center">
+    <p class="mb-0">Made by Adama & Suraj & Vuk</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // Array to hold submitted internships
+    const internships = JSON.parse(localStorage.getItem("internships")) || [];
+
+    // When the form is submitted, save the internship details
+    document.getElementById("internship-form").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const title = document.getElementById("title").value;
+      const country = document.getElementById("country").value;
+      const link = document.getElementById("link").value;
+      const description = document.getElementById("description").value;
+
+      // Store the internship data
+      internships.push({ title, country, link, description });
+      localStorage.setItem("internships", JSON.stringify(internships));
+
+      // Reset form after submission
+      alert(`Internship Submitted: ${title} in ${country}`);
+      this.reset();
     });
-
-    localStorage.setItem("proposals", JSON.stringify(proposals));
-
-    alert("Internship proposal submitted!");
-    document.getElementById("internship-form").reset();
-  });
-</script>
+  </script>
+</body>
+</html>
